remove obsolete kafka code
